Bug 48869 - Crash when dragging selected column to the left
Summary: Crash when dragging selected column to the left
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Linux (All)
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-04-18 04:32 UTC by Cor Nouws
Modified: 2013-12-15 23:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
simple spread sheet (13.82 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-04-18 04:33 UTC, Cor Nouws
Details
video of the crash (672.63 KB, application/ogg)
2012-07-05 06:07 UTC, Cor Nouws
Details
crash report Java Runtime Environment (76.36 KB, text/x-log)
2012-07-05 06:09 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-04-18 04:32:08 UTC
- spreadsheet with data in three colums
- select the second one
- drag (Alt-left mouse) to the outer left position
  > regularly crashes

I'll attach a spreadsheet that regularly crashes, but others crash more.
Comment 1 Cor Nouws 2012-04-18 04:33:18 UTC
Created attachment 60246 [details]
simple spread sheet
Comment 2 Cor Nouws 2012-04-18 04:34:22 UTC
found in in LO 3.5.3 rc0+ (LibreOffice 3.5.3rc0+
Version ID : 3d2333d-a73d29c-6845e52-f269e46-cd57e28)
Comment 3 Cor Nouws 2012-04-18 06:48:55 UTC
(In reply to comment #2)
> found in in LO 3.5.3 rc0+ (LibreOffice 3.5.3rc0+
> Version ID : 3d2333d-a73d29c-6845e52-f269e46-cd57e28)

Hmm, should be  http://dev-builds.libreoffice.org/daily/Linux-x86_10-Release_Configuration/master/current/master~2012-04-17_13.43.52_LibO-Dev_3.6.0alpha0_Linux_x86_install-deb_en-US.tar.gz
Comment 4 Nino 2012-04-18 15:18:29 UTC
Bug 48849 looks similar to this one (possible duplicate? - but Version is older - 3.4.3)
Comment 5 Markus Mohrhard 2012-04-19 03:48:37 UTC
And another one for me.
Comment 6 Markus Mohrhard 2012-04-19 08:28:57 UTC
Can't reproduce this in master
Comment 7 Cor Nouws 2012-04-19 12:00:37 UTC
(In reply to comment #6)
> Can't reproduce this in master

try harder :-)

I start a new document
type some data in three colums over more rows (random characeters or whatever)
Select second column
Drag to the left
Release mouse, column is there 
  and the appication is gone.

But hmm, maybe it's the build that I have??
Should poke others at the QA list maybe.
Comment 8 Markus Mohrhard 2012-04-19 13:19:14 UTC
> But hmm, maybe it's the build that I have??
> Should poke others at the QA list maybe.

Please try  a newer daily build. Sounds like one of the editeng problems from kohei's work that have been fixed recently.
Comment 9 Cor Nouws 2012-04-19 13:27:29 UTC
(In reply to comment #8)
> Please try  a newer daily build. Sounds like one of the editeng problems from
> kohei's work that have been fixed recently.

Will be glad to do so.
Currently the server still offers me the build from 2012-04-17 - will try again tomorrow
Comment 10 Markus Mohrhard 2012-05-04 00:21:06 UTC
@Cor: do you still see the problem?
Comment 11 Markus Mohrhard 2012-05-07 19:05:30 UTC
Please reopen if still in a current build
Comment 12 Cor Nouws 2012-05-08 06:24:11 UTC
(In reply to comment #11)
> Please reopen if still in a current build

Crashes on the very first attemp I make
   version 3.6.0alpha0+ Build ID: c2003c7
   Linux x86 32bit Ubuntu
Comment 13 Markus Mohrhard 2012-06-26 17:14:13 UTC
Cor can you retest. I still did not find a way to reproduce this. I would like to fix this bug but without a way to reproduce this I have no chance.
Comment 14 Markus Mohrhard 2012-07-03 13:40:58 UTC
Closing after one week of no response. Last known problem seems to be with pre beta1.
Comment 15 Cor Nouws 2012-07-05 06:05:12 UTC
Hi Markus,
Sorry for not being here earlier. I've only few thousands unread mails ;-)

I tried in beta2 and it crased and decided to take a video. Will attach that. 
Also there seems to be a java-crash report. Will attach that too.

So looks a problem related to my system, OS, Java version ...?
If other do not suffer, I would spent my time on more urgent matters is I may give you an advice ;-)
But thanks a lot of course for looking at this!
Cor
Comment 16 Cor Nouws 2012-07-05 06:07:59 UTC
Created attachment 63860 [details]
video of the crash
Comment 17 Cor Nouws 2012-07-05 06:09:16 UTC
Created attachment 63861 [details]
crash report Java Runtime Environment
Comment 18 Cor Nouws 2012-07-05 06:13:44 UTC
test for 45717 ;-)
Comment 19 Markus Mohrhard 2012-07-05 10:36:46 UTC
Will run it with memcheck and check if it shows something serious.
Comment 20 Not Assigned 2012-07-05 17:09:20 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c433fa0639ccf5caeb0c128c8a3794322e2a1c81

adjust the calculation of the cursor pos if ALT is used, fdo#48869
Comment 21 Not Assigned 2012-07-05 17:09:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f99a10d45331c8f007fd521880e7a61546c02fb8&g=libreoffice-3-6

adjust the calculation of the cursor pos if ALT is used, fdo#48869


It will be available in LibreOffice 3.6.