adjust the calculation of the cursor pos if ALT is used, fdo#48869

Change-Id: I6316717c860d999270aa7f0fb50af5f6dfc7efd7